# protonmail-local-ai

./: .editorconfig  .env.example  .gitignore  .hadolint.yaml  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  PLAN.md  README.md  SECURITY.md  docker-compose.first-run.yml  docker-compose.hardened.yml  docker-compose.host-ollama.yml  docker-compose.open-webui.host-ollama.yml  docker-compose.open-webui.yml  docker-compose.yml  lychee.toml  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: bridge-version-check.yml  bridge.yml  docker.yml  links.yml  lint.yml  security.yml  tests.yml
bridge/: .dockerignore  Dockerfile  entrypoint.sh  patch-source.sh
docs/: architecture.md  claude_desktop_config.example.json  mcp-tools.md  setup.md
indexer/: .dockerignore  Dockerfile  healthcheck.sh  pyproject.toml  requirements.txt
indexer/src/: attachment_indexing.py  chunker.py  database.py  embedder.py  maildir.py  main.py  parser.py  queue.py  quoting.py  reconciler.py  threader.py  timings.py
indexer/src/extractors/: __init__.py  docx.py  html.py  image.py  pdf.py  text.py  xlsx.py
indexer/src/migrations/: 0013_add_display_subject.sql  0014_qwen3_4096_dim.sql  0015_fts_rowid_indexes.sql  0016_threads_subject_folder_index.sql  0017_unit_norm_vec_invariant.sql  0018_message_chunks_message_date.sql  __init__.py  runner.py
indexer/tests/: conftest.py  test_attachment_indexing.py  test_chunker.py  test_database.py  test_embedder.py  test_extractors.py  test_maildir.py  test_main.py  test_migrations.py  test_parser.py  test_queue.py  test_quoting.py  test_reconciler.py  test_threader.py  test_timings.py
indexer/tests/fixtures/chunker/: long_body.eml  quoted_reply.eml  short_reply.eml  unicode.eml
mbsync/: .dockerignore  Dockerfile  entrypoint.sh  healthcheck.sh  mbsyncrc.template
mcp-server/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
mcp-server/src/: main.py
mcp-server/src/lib/: embed.py  imap.py  inference.py  local_llm.py  ollama.py  reranker.py  security.py  sqlite.py  validation.py
mcp-server/src/tools/: actions.py  intelligence.py  retrieval.py  search.py  system.py
mcp-server/tests/: conftest.py  test_actions.py  test_embed.py  test_imap.py  test_inference.py  test_intelligence.py  test_intelligence_handlers.py  test_local_llm.py  test_main.py  test_ollama.py  test_reranker.py  test_retrieval.py  test_search.py  test_security.py  test_sqlite.py  test_system.py  test_system_handlers.py  test_validation.py
mcp-server/tests/eval/: README.md  queries.example.json  test_retrieval_eval.py
mlx-lm-server/: README.md  com.local.mlx-lm-server.plist  com.local.mlx-lm-server.plist.template  install-launchagent.sh  pyproject.toml
mlx-service/: .gitignore  README.md  pyproject.toml
mlx-service/src/: main.py
mlx-service/tests/: test_endpoints.py
scripts/: bridge-patch-drift.sh  bridge-smoke.sh  check-host-ollama.sh  check-mcp-streamable.sh  eval_run.py  first-run.sh  update.sh  validate-env.sh
