[project]
name = "protonmail-local-ai-repo"
version = "0.0.0"
requires-python = ">=3.14"

[tool.uv]
package = false

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes — undefined names, unused imports
    "I",   # isort — import ordering
    "UP",  # pyupgrade — modernize syntax
]
ignore = [
    "E501",  # line too long — handled by formatter
]

[tool.ruff.lint.per-file-ignores]
# Tool registration functions use broad except for user-facing error handling
"mcp-server/src/tools/*.py" = ["F841"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
