[project]
name = "protonmail-local-ai-indexer"
version = "0.0.0"
requires-python = ">=3.14"
dependencies = [
    "html2text==2025.4.15",
    "sqlite-vec==0.1.9",
    "httpx==0.28.1",
    "watchdog==6.0.0",
    "python-dotenv==1.2.2",
    "tenacity==9.1.4",
]

[dependency-groups]
dev = [
    "pytest==9.0.3",
    "pytest-cov==7.1.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --cov=src --cov-branch --cov-report=term-missing --cov-fail-under=90"

[tool.coverage.run]
branch = true
source = ["src"]
omit = [
    "tests/*",
    # main.py is the service entrypoint: argument parsing, logging setup,
    # Ollama wait, watchdog registration. It is covered by docker-compose
    # integration rather than unit tests; excluding it keeps unit-test
    # coverage numbers honest.
    "src/main.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
