[project]
name = "protonmail-local-ai-mcp-server"
version = "0.0.0"
requires-python = ">=3.14"
dependencies = [
    "mcp==1.27.0",
    "uvicorn==0.44.0",
    "starlette==1.0.0",
    "sqlite-vec==0.1.9",
    "aioimaplib==2.0.1",
    "aiosmtplib==5.1.0",
    "httpx==0.28.1",
    "anthropic==0.96.0",
    "python-dotenv==1.2.2",
    "tenacity==9.1.4",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest==9.0.3",
    "pytest-cov==7.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --cov=src/lib --cov-branch --cov-report=term-missing --cov-fail-under=90"

[tool.coverage.run]
branch = true
# Unit-test scope is currently the shared library layer (security, sqlite,
# ollama). The MCP tool handlers, IMAP/SMTP client, and service bootstrap
# require live MCP framework / aioimaplib scaffolding and are validated via
# docker-compose integration rather than unit tests. Expand `source` as
# additional code paths gain dedicated unit tests.
source = ["src/lib"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
