[project]
name = "protonmail-local-ai-mcp-server"
version = "0.0.0"
requires-python = ">=3.14"
dependencies = [
    "mcp==1.27.0",
    "uvicorn==0.44.0",
    "starlette==1.0.0",
    "sqlite-vec==0.1.9",
    "aioimaplib==2.0.1",
    "httpx==0.28.1",
    "python-dotenv==1.2.2",
    "tenacity==9.1.4",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest==9.0.3",
    "pytest-cov==7.1.0",
]

[tool.pytest.ini_options]
# ``tests/eval`` is the opt-in retrieval-quality harness — it requires a
# real indexed mailbox via ``MCP_EVAL_DB`` and is excluded from the
# default collection so the regular suite stays self-contained. Run it
# explicitly with ``pytest -m eval``.
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --cov=src --cov-branch --cov-report=term-missing --cov-fail-under=90 --ignore=tests/eval"
markers = [
    "eval: opt-in retrieval-quality eval against a real mailbox (skipped by default; run with `pytest -m eval --override-ini='addopts='`)",
]

[tool.coverage.run]
branch = true
# Coverage scope is the full mcp-server package. Tool handlers run
# against a FakeMCPServer stub (see ``tests/conftest.py::FakeMCPServer``)
# so handler logic is exercised without standing up the real FastMCP
# transport. ``main.main()`` itself is excluded because it is a service
# bootstrap (env wiring, tool registration, ``server.run``) covered by
# docker-compose integration; its testable helpers (``_env_bool``,
# ``_read_secret``, the ``/health`` route) are unit-tested directly.
source = ["src"]
omit = [
    "tests/*",
    "src/main.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
