[project]
name = "protonmail-local-ai-mcp-server"
version = "0.0.0"
requires-python = ">=3.14"
dependencies = [
    "mcp==1.27.1",
    "uvicorn==0.47.0",
    "starlette==1.0.0",
    "sqlite-vec==0.1.9",
    "aioimaplib==2.0.1",
    "httpx==0.28.1",
    # Inference, embed, and rerank SDKs. ``openai`` covers both
    # ``INFERENCE_MODE=openai`` (chat completions) and ``EMBED_MODE=openai``
    # (the ``/v1/embeddings`` wire format every operator-supplied compat
    # server — LM Studio, vLLM, mlx_lm.server, TEI, DeepInfra,
    # OpenRouter — already speaks). The embed client is a thin wrapper
    # around ``AsyncOpenAI`` so the project does not maintain its own
    # HTTP/retry plumbing for a wire format the SDK already handles.
    "openai==2.36.0",
    "anthropic==0.100.0",
    "cohere==6.1.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "mypy==2.1.0",
    "pytest==9.0.3",
    "pytest-cov==7.1.0",
]

[tool.pytest.ini_options]
# ``tests/eval`` is the opt-in retrieval-quality harness — it requires a
# real indexed mailbox via ``MCP_EVAL_DB`` and is excluded from the
# default collection so the regular suite stays self-contained. Run it
# explicitly with ``pytest -m eval``.
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --cov=src --cov-branch --cov-report=term-missing --cov-fail-under=90 --ignore=tests/eval"
markers = [
    "eval: opt-in retrieval-quality eval against a real mailbox (skipped by default; run with `pytest -m eval --override-ini='addopts='`)",
]

[tool.mypy]
python_version = "3.14"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "aioimaplib.*",
    "sqlite_vec.*",
]
ignore_missing_imports = true

[tool.coverage.run]
branch = true
# Coverage scope is the full mcp-server package. Tool handlers run
# against a FakeMCPServer stub (see ``tests/conftest.py::FakeMCPServer``)
# so handler logic is exercised without standing up the real FastMCP
# transport. ``main.main()`` itself is excluded because it is a service
# bootstrap (env wiring, tool registration, ``server.run``) covered by
# docker-compose integration; its testable helpers (``_env_bool``,
# ``_read_secret``, the ``/health`` route) are unit-tested directly.
source = ["src"]
omit = [
    "tests/*",
    "src/main.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
