[project]
name = "protonmail-local-ai-mlx-service"
version = "0.0.0"
requires-python = ">=3.14"
dependencies = [
    "fastapi==0.136.1",
    "uvicorn==0.46.0",
    "pydantic==2.12.4",
    "mlx==0.31.2",
    "mlx-embeddings==0.1.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "mypy==1.18.2",
    "pytest==9.0.3",
    "pytest-cov==7.1.0",
    "httpx==0.28.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.14"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "mlx.*",
    "mlx_embeddings.*",
]
ignore_missing_imports = true
